--- a/WebContent/css/header.css
+++ b/WebContent/css/header.css
@@ -10,11 +10,12 @@
 	font-size:60px;
 	margin-top:0px;
 	text-align:center;
-	width:30%;
+	width:29%;
 }
 .navi{
 margin-top:0px;
 width:100%;
+height:80px;
 }
 .navi-box{
 	position:relative;
