--- a/WebContent/css/master.css
+++ b/WebContent/css/master.css
@@ -1,9 +1,33 @@
-body{
+html,body{
 	width:100%;
-	height:1000px;
+	height:100%;
 	margin:0;
 }
 
-a {
-text-decoration: none;
+a:link { color:#black;
+text-decoration:none }
+a:visited { color:#fff; text-decoration:none }
+a:hover { color:#fff; text-decoration:none }
+a:active { color:#fff; text-decoration:none }
+
+#container{
+	position:relative;
+	width:100%;
+	height: auto !important;
+	height:100%;
+	min-height:100%;
 }
+header{
+	width:100%;
+	height:80px;
+	background-color:red;
+}
+
+footer{
+	position:absolute;
+	bottom:0;
+	width:100%;
+	text-align:center;
+}
+
+
