--- a/WebContent/css/header.css
+++ b/WebContent/css/header.css
@@ -1,16 +1,12 @@
-.header{
-	background-color:;
-	height:80px;
-	width:100%;
-	margin: 0 0;
-}
+.navi-box > a:link { color:#fff;text-decoration:none; }
+.navi-box > a:visited { color:#fff; text-decoration:none; }
+.navi-box > a:hover { color:#fff; text-decoration:none;}
+.navi-box > a:active { color:#fff; text-decoration:none; }
+.navi-box > a {width:100%; height:80px;display:block;padding-top:16%;}
 
 .logo{
-	position:absolute;
-	font-size:60px;
-	margin-top:0px;
-	text-align:center;
-	width:29%;
+	padding-top:16px !important;
+	padding-left:15px !important;
 }
 .navi{
 margin-top:0px;
@@ -20,8 +16,19 @@ height:80px;
 .navi-box{
 	position:relative;
 	float:right;
-	margin-top:40px;
-	width:180px;
+	width:14.28%;
+	height:80px;
 	font-size:22px;
 	text-align:center;
+	background-color:rgba(0,0,0,0.4);
+	transition: background-color 2s;
+  	-webkit-transition: background-color 1.2s;
+}
+
+.navi-box:hover{
+	background-color:rgba(255,255,255,0.2);
+}
+
+.before{
+	width:16.6666% !important;
 }
