--- a/WebContent/css/master.css
+++ b/WebContent/css/master.css
@@ -2,14 +2,11 @@ html,body{
 	width:100%;
 	height:100%;
 	margin:0;
-	background-image:url("img/background.jpg")
+	background-image:url("../img/background.JPG");
+	background-size:cover;
+	font-family:serif;
 }
 
-a:link { color:#black;
-text-decoration:none }
-a:visited { color:#fff; text-decoration:none }
-a:hover { color:#fff; text-decoration:none }
-a:active { color:#fff; text-decoration:none }
 
 #container{
 	position:relative;
@@ -17,11 +14,12 @@ a:active { color:#fff; text-decoration:none }
 	height: auto !important;
 	height:100%;
 	min-height:100%;
+	background: rgba(220,220,220,0.2);
 }
 header{
 	width:100%;
 	height:80px;
-	background-color:red;
+	background-color:rgba(0,0,0,0.4);
 }
 
 footer{
