--- a/WebContent/css/index.css
+++ b/WebContent/css/index.css
@@ -1,1 +1,34 @@
+.head-space{
+	padding:25px;
+	width:100%;
+}
 
+.salon-template{
+	display:none;
+	font-size:47px;
+	margin:0px;
+	text-shadow: 2px 2px 2px #999999;
+}
+
+.salon-concept{
+	display:none;
+}
+
+.salon-name{
+	text-align:center;
+}
+
+.information > p{
+	text-align:center;
+	display:none;
+	margin-top:25px;
+	margin-bottom:5px;
+}
+
+.information > table{
+	margin: 0 auto;
+	display:none;
+	text-align: center;
+	background-color: rgba(255,255,255,0.3);
+	border-radius:3px;
+}
