--- a/WebContent/css/master.css
+++ b/WebContent/css/master.css
@@ -4,7 +4,7 @@ html,body{
 	margin:0;
 	background-image:url("../img/background.JPG");
 	background-size:cover;
-	font-family:serif;
+	font-family:sans-serif;
 }
 
 
