--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -1,4 +1,8 @@
-img{
+.head-space{
+	padding: 25px;
+}
+
+.img{
 	height:200px;
 	width:200px;
 }
@@ -10,4 +14,8 @@ img{
 .style-Img{
 	position:relative;
 	float:left;
+}
+
+h2{
+	margin-left: 10%;
 }
