--- a/WebContent/css/master.css
+++ b/WebContent/css/master.css
@@ -2,6 +2,7 @@ html,body{
 	width:100%;
 	height:100%;
 	margin:0;
+	padding:0;
 	background-image:url("../img/background.JPG");
 	background-size:cover;
 	font-family:sans-serif;
@@ -15,12 +16,10 @@ html,body{
 	height:100%;
 	min-height:100%;
 	background: rgba(220,220,220,0.2);
+	top:0;
+	margin:0!important;
 }
-header{
-	width:100%;
-	height:80px;
-	background-color:rgba(0,0,0,0.4);
-}
+
 
 footer{
 	position:absolute;
