--- a/WebContent/css/information.css
+++ b/WebContent/css/information.css
@@ -8,8 +8,10 @@
 	width:200px;
 	text-align:center;
 	table-layout:fixed;
+	font-size:16px;
 }
 
 .salon-addtel > p{
 	text-align:center;
+	font-size:16px;
 }
